--- a/landing.html
+++ b/landing.html
@@ -14,8 +14,10 @@
       <li><a href="#">NEWS</a></li>
       <li><a href="#">MENU</a></li>
       <li><a href="#">CONTACT US</a></li>
-      <li class="right"><a href="login.html">LOG IN</a></li>
-      <li class="right"><a href="signup.html">SIGN UP</a></li>
+     <li class="right auth-buttons">
+  <a href="login.html">LOG IN</a>
+  <a href="signup.html">SIGN UP</a>
+</li>
     </ul>
   </nav>
 
