--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="assets/cutlery.png">
 </head>
 <body>
   <!-- Navbar -->
@@ -15,8 +16,8 @@
       <li><a href="#">MENU</a></li>
       <li><a href="#">CONTACT US</a></li>
      <li class="right auth-buttons">
-  <a href="login.html">LOG IN</a>
-  <a href="signup.html">SIGN UP</a>
+        <a href="landing.html">LOG OUT</a>
+        
 </li>
     </ul>
   </nav>
