--- a/login.html
+++ b/login.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="assets/cutlery.png">
 </head>
 <body>
   <div class="login-container">
     <div class="login-form">
       <h2>Welcome Back!</h2>
       <form>
+        <h3>Email</h3>
         <input type="email" placeholder="Enter your email address" required>
+         <h3>Password</h3>
         <input type="password" placeholder="Enter your password" required>
         <button type="submit">Log in</button>
         <a href="#">Forgot your password?</a>
@@ -21,5 +24,6 @@
       <img src="assets/food.jpg" alt="Steak">
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
