--- a/landing.html
+++ b/landing.html
@@ -16,8 +16,8 @@
       <li><a href="#">MENU</a></li>
       <li><a href="#">CONTACT US</a></li>
      <li class="right auth-buttons">
-        <a href="landing.html">LOG OUT</a>
-        
+        <a href="login.html">LOG IN</a>
+        <a href="signup.html">SIGN UP</a>
 </li>
     </ul>
   </nav>
